<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rcl_logging_zephyr</name>
  <version>0.1.0</version>
  <description>An rcl logger implementation that use Zephyr RTOS log messages subsystem.</description>
  <maintainer email="ila.embsys@gmail.com">Ilya Stolyarov</maintainer>
  <license>Apache License 2.0</license>
  <author email="ila.embsys@gmail.com">Ilya Stolyarov</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>python3-empy</buildtool_depend>

  <depend>rcl_logging_interface</depend>
  <depend>rcutils</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>launch_testing</test_depend>

  <member_of_group>rcl_logging_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
